--- a/layout.html
+++ b/layout.html
@@ -2,11 +2,13 @@
 <html>
 <head>
   <link rel="stylesheet" href="bower_components/normalize-css/normalize.css">
+  <link rel="stylesheet" href="bower_components/components-font-awesome/css/font-awesome.min.css">
   <link rel="stylesheet" href="assets/stylesheets/build/viewer.css">
 </head>
 <body>
   <div class="action-bar z-depth-1">
-    <div class="text-title">火影忍者 692话</div>
+    <span class="action-icon action-icon-nav"><i class="fa fa-navicon"></i></span>
+    <span class="text-title">火影忍者 692话</span>
   </div>
 </body>
 </html>
