--- a/layout.html
+++ b/layout.html
@@ -6,9 +6,17 @@
   <link rel="stylesheet" href="assets/stylesheets/build/viewer.css">
 </head>
 <body>
-  <div class="action-bar z-depth-1">
-    <span class="action-icon action-icon-nav"><i class="fa fa-navicon"></i></span>
-    <span class="text-title">火影忍者 692话</span>
+  <div>
+    <div class="action-bar">
+      <span class="action-icon action-icon-nav"><i class="fa fa-navicon"></i></span>
+      <span class="text-title">火影忍者 692话</span>
+    </div>
+    
+    <div class="episode">
+      <div class="page"><img src="http://coldpic.sfacg.com/Pic/OnlineComic4/NZJD/308/001_0498.png" alt=""></div>
+      <div class="page"><img src="http://coldpic.sfacg.com/Pic/OnlineComic4/NZJD/308/002_1536.png" alt=""></div>
+      <div class="page"><img src="http://coldpic.sfacg.com/Pic/OnlineComic4/NZJD/308/003_1013.png" alt=""></div>
+    </div>
   </div>
 </body>
 </html>
