--- a/layout.html
+++ b/layout.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="assets/stylesheets/build/viewer.css">
 </head>
 <body>
-  <div>
+  <div class="viewer">
     <div class="action-bar">
       <span class="action-icon action-icon-nav"><i class="fa fa-navicon"></i></span>
       <span class="text-title">火影忍者 692话</span>
