--- a/layout.html
+++ b/layout.html
@@ -3,7 +3,7 @@
 <head>
   <link rel="stylesheet" href="bower_components/normalize-css/normalize.css">
   <link rel="stylesheet" href="bower_components/components-font-awesome/css/font-awesome.min.css">
-  <link rel="stylesheet" href="assets/stylesheets/build/viewer.css">
+  <link rel="stylesheet" href="dist/assets/css/viewer.min.css">
 </head>
 <body>
   <div class="viewer">
