--- a/src/layout.html
+++ b/src/layout.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <link rel="stylesheet" href="bower_components/normalize-css/normalize.css">
-  <link rel="stylesheet" href="bower_components/components-font-awesome/css/font-awesome.min.css">
-  <link rel="stylesheet" href="dist/assets/css/viewer.min.css">
+  <link rel="stylesheet" href="../bower_components/normalize-css/normalize.css">
+  <link rel="stylesheet" href="../bower_components/components-font-awesome/css/font-awesome.min.css">
+  <link rel="stylesheet" href="./assets/css/viewer.min.css">
 </head>
 <body>
   <div class="viewer">
