--- a/src/layout.html
+++ b/src/layout.html
@@ -9,13 +9,22 @@
   <div class="viewer">
     <div class="action-bar">
       <span class="action-icon action-icon-nav"><i class="fa fa-navicon"></i></span>
-      <span class="text-title">火影忍者 692话</span>
+      <span class="text-title">逆转监督 308话</span>
     </div>
-    
-    <div class="episode">
-      <div class="page"><img src="http://coldpic.sfacg.com/Pic/OnlineComic4/NZJD/308/001_0498.png" alt=""></div>
-      <div class="page"><img src="http://coldpic.sfacg.com/Pic/OnlineComic4/NZJD/308/002_1536.png" alt=""></div>
-      <div class="page"><img src="http://coldpic.sfacg.com/Pic/OnlineComic4/NZJD/308/003_1013.png" alt=""></div>
+
+    <!-- <div class="left-menu">
+      <div class="cover" data-bg="http://mh.sfacg.com/Logo/201106/95d05ee5-d61f-4432-a58f-eca64cf9be95.jpg">
+        <span class="btn-close"><i class="fa fa-close"></i></span>
+        <div class="text-title">逆转监督</div>
+      </div>
+    </div> -->
+
+    <div id="content">
+      <div class="episode">
+        <div class="page"><img src="http://coldpic.sfacg.com/Pic/OnlineComic4/NZJD/308/001_0498.png" alt=""></div>
+        <div class="page"><img src="http://coldpic.sfacg.com/Pic/OnlineComic4/NZJD/308/002_1536.png" alt=""></div>
+        <div class="page"><img src="http://coldpic.sfacg.com/Pic/OnlineComic4/NZJD/308/003_1013.png" alt=""></div>
+      </div>
     </div>
   </div>
 </body>
